fixed cta spacing

--- a/css/fischer.css
+++ b/css/fischer.css
@@ -205,7 +205,6 @@ body{
 	margin: 0 auto;
 	text-align: center;
 	background-color: #E44424 !important;
-	margin: 3px 3px 11px 17px;
 	font-size: 13px;
 }
 
